--- a/03-lection1/01-button/button.css
+++ b/03-lection1/01-button/button.css
@@ -1,1 +1,68 @@
 /* Стилизация кнопки */
+:root {
+    --primary-color: #4263EB;
+    --primary-color-hover: #2342C0;
+    --secondary-color: #7048E8;
+    --secondary-color-hover: #5028C6;
+    --border_alternate: #ACB5BD;
+    --border_alternate_hover: #212429;
+    --white: #ffffff;
+    --black: #212429;
+}
+
+button {
+    border-radius: 8px;
+    width: 189px;
+    height: 48px;
+    border: none;
+    transition: opacity 500ms ease-in-out, background-color 500ms ease-in-out;
+    color: var(--white);
+}
+
+.button_primary {
+    background-color: var(--primary-color);
+}
+
+.button_primary:hover {
+    background-color: var(--primary-color-hover);
+    cursor: pointer;
+}
+
+.button_primary + .button_primary:hover {
+    opacity: 0.5;
+    cursor: not-allowed;
+}
+
+.button_secondary {
+    background-color: var(--secondary-color);
+}
+
+.button_secondary:hover {
+    background-color: var(--secondary-color-hover);
+    cursor: pointer;
+}
+
+.button_secondary + .button_secondary:hover {
+    opacity: 0.5;
+    cursor: not-allowed;
+}
+
+.button_alternate {
+    background-color: var(--white);
+    color: var(--black);
+    border: 1px solid var(--border_alternate);
+    box-sizing: border-box;
+    border-radius: 8px;
+}
+
+.button_alternate:hover {
+    border: 1px solid var(--border_alternate_hover);
+    box-sizing: border-box;
+    border-radius: 8px;
+    cursor: pointer;
+}
+
+.button_alternate + .button_alternate:hover {
+    opacity: 0.5;
+    cursor: not-allowed;
+}
