--- a/03-lection1/02-accordion/accordion.css
+++ b/03-lection1/02-accordion/accordion.css
@@ -1,1 +1,49 @@
 /* Стилизация аккордеона */
+
+:root {
+    --grey-3: #ACB5BD;
+    --grey-4: #495057;
+}
+
+details > summary {
+    list-style: none;
+  }
+
+.accordion {
+    display: block;
+    width: 730px;
+    border: 1px solid var(--grey-3);
+    border-radius: 8px;
+    overflow: hidden;
+    margin-bottom: 8px;
+    box-sizing: border-box;
+}
+
+.accordion__summary {
+    padding-top: 24px;
+    padding-bottom: 24px;
+    padding-left: 32px;
+    font-family: Inter;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 24px;
+}
+
+.accordion[open] .accordion__summary {
+    padding-bottom: 16px;
+}
+
+p {
+    margin: 0;
+    padding-bottom: 16px;
+    padding-left: 32px;
+    padding-right: 48.69px;
+    font-family: Inter;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 24px;
+    color: var(--grey-4);
+    text-align: justify;
+}
