--- a/03-lection1/02-accordion/accordion.css
+++ b/03-lection1/02-accordion/accordion.css
@@ -1,11 +1,7 @@
 /* Стилизация аккордеона */
+@import "../../assets/css/main.css";
 
-:root {
-    --grey-3: #ACB5BD;
-    --grey-4: #495057;
-}
-
-details > summary {
+.accordion__summary {
     list-style: none;
   }
 
@@ -17,12 +13,12 @@ details > summary {
     overflow: hidden;
     margin-bottom: 8px;
     box-sizing: border-box;
+    padding-left: 32px;
+    padding-top: 24px;
+    padding-bottom: 24px;
 }
 
 .accordion__summary {
-    padding-top: 24px;
-    padding-bottom: 24px;
-    padding-left: 32px;
     font-family: Inter;
     font-style: normal;
     font-weight: normal;
@@ -34,16 +30,18 @@ details > summary {
     padding-bottom: 16px;
 }
 
-p {
+.accordion[open] {
+    padding-bottom: 0;
+}
+
+.accordion__content {
     margin: 0;
-    padding-bottom: 16px;
-    padding-left: 32px;
-    padding-right: 48.69px;
+    padding-bottom: 32px;
     font-family: Inter;
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
     line-height: 24px;
     color: var(--grey-4);
-    text-align: justify;
+    text-align: left;
 }
